--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -39,25 +39,25 @@ jobs:
 
     - name: Build and Push Docker Images, Create Stack, Upload S3 Files
       run: |
-        aws cloudformation create-stack --stack-name better-wellness-live --template-body file://amazon-eks.yaml --capabilities CAPABILITY_NAMED_IAM  --region $AWS_REGION
-        aws cloudformation wait stack-create-complete --stack-name better-wellness-live --region $AWS_REGION
+        #aws cloudformation create-stack --stack-name better-wellness-live --template-body file://amazon-eks.yaml --capabilities CAPABILITY_NAMED_IAM  --region $AWS_REGION
+        #aws cloudformation wait stack-create-complete --stack-name better-wellness-live --region $AWS_REGION
 
-        aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $DOCKER_REPO_URL       
+        #aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $DOCKER_REPO_URL       
 
         CURRENT_DATETIME=$(date +'%Y%m%d%H%M%S')
         echo "CURRENT_DATETIME=$CURRENT_DATETIME" >> $GITHUB_ENV
 
-        for SERVICE_NAME in auth-service message-service profile-service; do
-          cd $SERVICE_NAME
-          docker build -t $SERVICE_NAME:$CURRENT_DATETIME .
-          docker tag $SERVICE_NAME:$CURRENT_DATETIME $DOCKER_REPO_URL/$SERVICE_NAME:$CURRENT_DATETIME
-          docker tag $SERVICE_NAME:$CURRENT_DATETIME $DOCKER_REPO_URL/$SERVICE_NAME:latest
-          docker push $DOCKER_REPO_URL/$SERVICE_NAME:$CURRENT_DATETIME
-          docker push $DOCKER_REPO_URL/$SERVICE_NAME:latest
-          cd ..
-        done
+        #for SERVICE_NAME in auth-service message-service profile-service; do
+        #  cd $SERVICE_NAME
+        #  docker build -t $SERVICE_NAME:$CURRENT_DATETIME .
+        #  docker tag $SERVICE_NAME:$CURRENT_DATETIME $DOCKER_REPO_URL/$SERVICE_NAME:$CURRENT_DATETIME
+        #  docker tag $SERVICE_NAME:$CURRENT_DATETIME $DOCKER_REPO_URL/$SERVICE_NAME:latest
+        #  docker push $DOCKER_REPO_URL/$SERVICE_NAME:$CURRENT_DATETIME
+        #  docker push $DOCKER_REPO_URL/$SERVICE_NAME:latest
+        #  cd ..
+        #done
 
-        aws eks update-kubeconfig --region $AWS_REGION --name better-wellness-live
+        aws eks update-kubeconfig --region $AWS_REGION --name better-wellness-prod
 
         cd client-service/dist
         aws s3 cp . s3://better-wellness-live/ --recursive
